--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="icon" type=" assets/hero-icons.png " href="  assets/hero-icons.png     ">
 
 
-<meta name="description" content="موقع Ziroxoft بيفدم لك كل ما تحتاجه من تحليل الدرجات و خدمات كتير في مكان واحد">
+<meta name="description" content="موقع Ziroxoft بيقدم لك كل ما تحتاجه من تحليل الدرجات و خدمات كتير في مكان واحد">
 
 <meta name="keywords" content="Ziroxoft, زيروكسوفت, ZIROXOFT, Ziro, زيرو">
 
@@ -361,4 +361,5 @@
 
 
 </body>
+
 </html>
