--- a/index.html
+++ b/index.html
@@ -7,7 +7,40 @@
 
 <link rel="icon" type=" assets/hero-icons.png " href="  assets/hero-icons.png     ">
 
+https://ziroxoft.com/assets/hero-icons.png
 
+
+
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="Ziroxoft" />
+<meta property="og:description" content="موقع خدمات تقنية مبتكرة" />
+<meta property="og:image" content="https://ziroxoft.com/assets/hero-icons.png" />
+<meta property="og:url" content="https://ziroxoft.com/" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Ziroxoft" />
+<meta name="twitter:description" content="موقع خدمات تقنية مبتكرة" />
+<meta name="twitter:image" content="https://ziroxoft.com/assets/hero-icons.png" />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+  
 <meta name="description" content="موقع Ziroxoft بيقدم لك كل ما تحتاجه من تحليل الدرجات و خدمات كتير في مكان واحد">
 
 <meta name="keywords" content="Ziroxoft, زيروكسوفت, ZIROXOFT, Ziro, زيرو">
@@ -363,3 +396,4 @@
 </body>
 
 </html>
+
