--- a/index4.html
+++ b/index4.html
@@ -21,7 +21,7 @@
     <div class="buttons">
       <button onclick="generateQR()">تحويل إلى QR</button>
       <button onclick="downloadPDF()">تحميل كـ PDF</button>
-      <button onclick="copyQR()">نسخ الكود</button>
+      <button id="copyQR()">نسخ الكود</button>
     </div>
     <div id="qr-container">
       <canvas id="qr-code"></canvas>
@@ -31,5 +31,42 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="script4.js"></script>
+
+
+
+<script>
+  let copyCount = 0; // عداد الضغطات
+
+  document.getElementById("copyBtn").addEventListener("click", function () {
+    copyCount++;
+
+    if (copyCount === 3) {
+      // هنا يتم عرض إعلان Adsterra
+      copyCount = 0; // نرجع العداد يبدأ من جديد
+      // كود Adsterra
+      var s = document.createElement('script');
+      s.src = "//pl27644444.revenuecpmgate.com/e4/ad/81/e4ad815623605929e3a305ed2ae0434c.js";
+      document.body.appendChild(s);
+    } else {
+      // استدعاء دالة النسخ العادية
+      copyQR();
+    }
+  });
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
