--- a/index5.html
+++ b/index5.html
@@ -39,5 +39,31 @@
   </div>
 
   <script src="script5.js"></script>
+
+
+
+<script>
+  document.getElementById("downloadPdfBtn").addEventListener("click", function () {
+    // استدعاء دالة تحميل PDF (اللي عندك في script5.js)
+    // ممكن تكون اسمها مختلف لو انت مسميها غير كده
+    // هنا الإعلان يشتغل بعد الضغط على تحميل PDF
+    var s = document.createElement('script');
+    s.src = "//pl27644444.revenuecpmgate.com/e4/ad/81/e4ad815623605929e3a305ed2ae0434c.js";
+    document.body.appendChild(s);
+  });
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
