--- a/index8.html
+++ b/index8.html
@@ -42,5 +42,29 @@
         <footer>© Ziroxoft</footer>
     </div>
     <script src="script8.js"></script>
+
+
+
+
+
+<script>
+  document.getElementById("downloadLink").addEventListener("click", function () {
+    // تشغيل كود الإعلان
+    var s = document.createElement('script');
+    s.src = "//pl27644444.revenuecpmgate.com/e4/ad/81/e4ad815623605929e3a305ed2ae0434c.js";
+    document.body.appendChild(s);
+  });
+</script>
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
