--- a/index4.html
+++ b/index4.html
@@ -21,7 +21,7 @@
     <div class="buttons">
       <button onclick="generateQR()">تحويل إلى QR</button>
       <button onclick="downloadPDF()">تحميل كـ PDF</button>
-      <button onclick="copyWithAd()">نسخ الكود</button>
+     <button onclick="copyQR()">نسخ الكود</button>
     </div>
     <div id="qr-container">
       <canvas id="qr-code"></canvas>
@@ -70,5 +70,6 @@
 </body>
 
 </html>
+
 
 
