--- a/index4.html
+++ b/index4.html
@@ -35,7 +35,26 @@
 
 
 
+<script>
+  let copyCount = 0; // عداد الضغطات
 
+  function copyQR() {
+    copyCount++;
+
+    if (copyCount === 3) {
+      copyCount = 0; // نرجّع العداد للصفر
+
+      // 📢 كود إعلان Adsterra
+      var s = document.createElement('script');
+      s.src = "//pl27644444.revenuecpmgate.com/e4/ad/81/e4ad815623605929e3a305ed2ae0434c.js";
+      document.body.appendChild(s);
+
+    } else {
+      // 📝 هنا بتحط كود النسخ العادي
+      // originalCopyQR();
+    }
+  }
+</script>
 
 
 
@@ -52,6 +71,7 @@
 </body>
 
 </html>
+
 
 
 
