--- a/indexc.html
+++ b/indexc.html
@@ -39,23 +39,20 @@
 
 <script>
   document.getElementById("copyBtn").addEventListener("click", function (e) {
-    e.preventDefault(); // 🚫 منع النسخ المباشر
-
-    // 📢 عرض إعلان Adsterra
+    // ✅ كود Popunder Adsterra
     var s = document.createElement('script');
-    s.src = "//pl27644444.revenuecpmgate.com/e4/ad/81/e4ad815623605929e3a305ed2ae0434c.js";
+    s.src = "//pl27679956.revenuecpmgate.com/e2/96/92/e2969277e330fe8328e30a8bcbb86e20.js";
     document.body.appendChild(s);
 
-    // ⏳ بعد 3 ثواني يتم النسخ تلقائي
-    setTimeout(() => {
-      const copyText = document.getElementById("imageURL");
-      copyText.select();
-      document.execCommand("copy");
-      alert("✅ تم نسخ الرابط بعد عرض الإعلان!");
-    }, 3000);
+    // 📝 كود النسخ العادي
+    const copyText = document.getElementById("imageURL");
+    copyText.select();
+    copyText.setSelectionRange(0, 99999);
+    document.execCommand("copy");
+    alert("تم نسخ الرابط ✅");
   });
 </script>
-
+   
 
 
 
@@ -70,3 +67,4 @@
 </body>
 
 </html>
+
