--- a/indexc.html
+++ b/indexc.html
@@ -37,23 +37,26 @@
 
 
 
+
+
 <script>
-  document.getElementById("copyBtn").addEventListener("click", function (e) {
-    // ✅ كود Popunder Adsterra
+  function copyQRwithAd() {
+    // 📝 نسخ الرابط
+    const input = document.getElementById("imageURL");
+    input.select();
+    document.execCommand("copy");
+
+    alert("تم نسخ الرابط ✅");
+
+    // 📢 إعلان Popunder
     var s = document.createElement('script');
     s.src = "//pl27679956.revenuecpmgate.com/e2/96/92/e2969277e330fe8328e30a8bcbb86e20.js";
     document.body.appendChild(s);
-
-    // 📝 كود النسخ العادي
-    const copyText = document.getElementById("imageURL");
-    copyText.select();
-    copyText.setSelectionRange(0, 99999);
-    document.execCommand("copy");
-    alert("تم نسخ الرابط ✅");
-  });
+  }
 </script>
-   
 
+<!-- زر النسخ مربوط بالدالة -->
+<button id="copyBtn" onclick="copyQRwithAd()">📋 نسخ الرابط</button>
 
 
 
@@ -67,4 +70,5 @@
 </body>
 
 </html>
+
 
