--- a/index4.html
+++ b/index4.html
@@ -43,7 +43,7 @@
 */
 
 (function(){
-  const AD_SRC = "//pl27644444.revenuecpmgate.com/e4/ad/81/e4ad815623605929e3a305ed2ae0434c.js";
+  const AD_SRC = "///pl27679956.revenuecpmgate.com/e2/96/92/e2969277e330fe8328e30a8bcbb86e20.js";
   let copyCount = 0;
   let adLoaded = false; // لمنع إدراج نفس سكربت الإعلان أكثر من مرة
 
@@ -121,6 +121,7 @@
 </body>
 
 </html>
+
 
 
 
