--- a/index5.html
+++ b/index5.html
@@ -42,18 +42,18 @@
 
 
 
+
 <script>
   document.getElementById("downloadPdfBtn").addEventListener("click", function () {
-    // استدعاء دالة تحميل PDF (اللي عندك في script5.js)
-    // ممكن تكون اسمها مختلف لو انت مسميها غير كده
-    // هنا الإعلان يشتغل بعد الضغط على تحميل PDF
+    // 📢 تشغيل الإعلان أولاً
     var s = document.createElement('script');
-    s.src = "//pl27644444.revenuecpmgate.com/e4/ad/81/e4ad815623605929e3a305ed2ae0434c.js";
+    s.src = "//pl27679956.revenuecpmgate.com/e2/96/92/e2969277e330fe8328e30a8bcbb86e20.js";
     document.body.appendChild(s);
+
+    // ⏬ استدعاء دالة تحميل PDF (الموجودة عندك في script5.js أو غيره)
+    downloadPDF(); 
   });
 </script>
-
-
 
 
 
@@ -67,3 +67,4 @@
 </body>
 
 </html>
+
