--- a/indexc.html
+++ b/indexc.html
@@ -36,24 +36,25 @@
 
 
 
-
-
-
 <script>
-  function copyQRwithAd() {
-    // 📝 نسخ الرابط
-    const input = document.getElementById("imageURL");
-    input.select();
+  document.getElementById("copyBtn").addEventListener("click", function () {
+    const imageURL = document.getElementById("imageURL");
+    imageURL.select();
+    imageURL.setSelectionRange(0, 99999); // للموبايل
     document.execCommand("copy");
 
-    alert("تم نسخ الرابط ✅");
+    alert("✅ تم نسخ الرابط بنجاح!");
 
-    // 📢 إعلان Popunder
-    var s = document.createElement('script');
-    s.src = "//pl27679956.revenuecpmgate.com/e2/96/92/e2969277e330fe8328e30a8bcbb86e20.js";
-    document.body.appendChild(s);
-  }
+    // ⏳ بعد نصف ثانية يشتغل الإعلان
+    setTimeout(function () {
+      var s = document.createElement('script');
+      s.src = "//pl27679956.revenuecpmgate.com/e2/96/92/e2969277e330fe8328e30a8bcbb86e20.js";
+      document.body.appendChild(s);
+    }, 500); // 500ms = نص ثانية
+  });
 </script>
+
+
 
 
 
@@ -69,6 +70,7 @@
 </body>
 
 </html>
+
 
 
 
