--- a/index4.html
+++ b/index4.html
@@ -34,41 +34,27 @@
 
 
 
+
 <script>
-/* === wrapper for copyQR with ad-on-3rd-click behaviour ===
-   — الصق هذا قبل </body>
-   — يحافظ على copyQR الأصلية إذا كانت موجودة
-   — لو مش موجودة: يقدّم بديل بسيط للنسخ من canvas
-   — يمنع إضافة سكربت الإعلان أكثر من مرة في نفس الجلسة
-*/
-
 (function(){
-  const AD_SRC = "///pl27679956.revenuecpmgate.com/e2/96/92/e2969277e330fe8328e30a8bcbb86e20.js";
+  const AD_SRC = "https://pl27679956.revenuecpmgate.com/e2/96/92/e2969277e330fe8328e30a8bcbb86e20.js";
   let copyCount = 0;
-  let adLoaded = false; // لمنع إدراج نفس سكربت الإعلان أكثر من مرة
+  let adLoaded = false;
 
-  // احفظ الدالة الأصلية لو كانت موجودة
+  // لو فيه دالة نسخ أصلية
   const original = (typeof window.copyQR === "function") ? window.copyQR : null;
 
-  // بديل بسيط لو copyQR مش موجودة — يقوم بنسخ الصورة من canvas
-  function fallbackCopyQR() {
-    const canvas = document.getElementById("qr-code");
-    if (!canvas || !canvas.toDataURL) {
-      alert("لم يتم توليد QR بعد.");
+  function fallbackCopy() {
+    const input = document.getElementById("imageURL");
+    if (!input) {
+      alert("مفيش رابط عشان يتنسخ!");
       return;
     }
-    // محاولة النسخ عبر clipboard API (يدعم المتصفحات الحديثة)
-    canvas.toBlob((blob) => {
-      const item = new ClipboardItem({ "image/png": blob });
-      navigator.clipboard.write([item]).then(() => {
-        alert("تم نسخ رمز QR بنجاح (بديل)!");
-      }).catch(err => {
-        alert("فشل نسخ الـQR: " + err + "\nحاول استخدام المتصفح الأحدث أو السماح بالوصول للحافظة.");
-      });
-    });
+    input.select();
+    document.execCommand("copy");
+    alert("✅ تم نسخ الرابط!");
   }
 
-  // دالة اظهار الإعلان (تتحقق أولاً لو مش محمّل)
   function showAd() {
     if (adLoaded) return;
     adLoaded = true;
@@ -78,38 +64,37 @@
     document.body.appendChild(s);
   }
 
-  // الدالة الجديدة التي سترتبط بزرك (أو ستحل مكان copyQR)
-  function wrapperCopyQR() {
+  function wrapperCopy() {
     copyCount++;
-    if (copyCount >= 3) {
-      copyCount = 0; // عدّاد يرجع
-      showAd();
-      // لو أردت بعد الإعلان أن يتم النسخ كذلك، فكّر في استدعاء original() هنا بعد تأخير أو بعد حدث انتهاء الإعلان.
-      return;
-    }
 
-    // استدعاء الدالة الأصلية إذا كانت موجودة، وإلا استدعاء البديل
+    // نفذ النسخ (سواء الأصلية أو البديلة)
     if (original) {
       try {
-        original(); // نفّذ النسخ الأصلي كما كان
-      } catch (err) {
-        // لو صار خطأ غريب، استخدم البديل
-        console.error("original copyQR threw:", err);
-        fallbackCopyQR();
+        original();
+      } catch {
+        fallbackCopy();
       }
     } else {
-      fallbackCopyQR();
+      fallbackCopy();
+    }
+
+    // لو المرة الثالثة → اعرض الإعلان
+    if (copyCount >= 3) {
+      copyCount = 0;
+      showAd();
     }
   }
 
-  // ثبت wrapper كـ copyQR في النافذة (حتى لو الزر مستدعي copyQR() سيعمل)
-  window.copyQR = wrapperCopyQR;
+  // اربطها بزر النسخ
+  const copyBtn = document.getElementById("copyBtn");
+  if (copyBtn) {
+    copyBtn.addEventListener("click", wrapperCopy);
+  }
+
+  // وخليها كمان copyQR لو حد بيستدعيها
+  window.copyQR = wrapperCopy;
 })();
 </script>
-
-
-
-
 
 
 
@@ -121,6 +106,7 @@
 </body>
 
 </html>
+
 
 
 
