--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   
   
-<meta name="description" content="موقع Ziroxoft بيقدم لك كل ما تحتاجه من تحليل الدرجات و خدمات كتير في مكان واحد">
+<meta name="description" content="موقع Ziroxoft بيقدم لك كل ما تحتاجه من تحليل الدرجات و خدمات كتير في مكان واحد صنع علي يد يوسف محمد سليمان">
 
 <meta name="keywords" content="Ziroxoft, زيروكسوفت, ZIROXOFT, Ziro, زيرو">
 
@@ -396,6 +396,7 @@
 </body>
 
 </html>
+
 
 
 
